<resources>
    <string name="app_name">LocAlarm</string>
    <string name="are_you_in_emergency">Are You in Emergency?</string>
    <string name="shakePhone">Shake the phone 3 times to trigger texts to your emergency contacts</string>
    <string name="contacts_page">Contacts Page</string>
    <string name="add_emergency_contact">Add Emergency Contact</string>
    <string name="sos">SOS</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="enter_name_of_the_alarm">Enter name of the alarm</string>
    <string name="about">About</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>